# BizzareChess

./: CMakeLists.txt  Main.cpp  README.md  compile_with_tests.ps1  imgui.ini  initializer.ps1  run.ps1
include/: Bishop.hpp  ChessBoard.hpp  Chessboard3D.hpp  Game.hpp  Game3D.hpp  GameInterface.hpp  GameTerminal.hpp  King.hpp  Knight.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  RaySelection.hpp  Rook.hpp  Utility.hpp
src/: Bishop.cpp  ChessBoard.cpp  ChessBoard_game_logic.cpp  ChessBoard_key.cpp  ChessBoard_kings_logic.cpp  ChessBoard_moves.cpp  ChessBoard_piece_control.cpp  Chessboard3D.cpp  Game.cpp  Game3D.cpp  GameTerminal.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  RaySelection.cpp  Rook.cpp  Utility.cpp
tests/: Bishop_test.cpp  CMakeLists.txt  ChessBoard_test.cpp  Game_test.cpp  King_Board_test.cpp  King_test.cpp  Knight_test.cpp  Pawn_test.cpp  Queen_test.cpp  Rook_test.cpp
